tests/miniJava/neg/004399_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] class java { public static void Main ( String [ ] java ) { { } } } java ( ) { return 0 ; } }
